Review agent fixes

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -88,8 +88,9 @@ steps:
       - '--memory=1Gi'
       - '--max-instances=1'
       - '--set-secrets=JIRA_API_TOKEN=JIRA_API_TOKEN:latest,JIRA_USERNAME=JIRA_USERNAME:latest,JIRA_URL=JIRA_URL:latest'
+      - '--set-env-vars=MCP_LOGGING_STDOUT=true,DISABLE_JIRA_MARKUP_TRANSLATION=true'      
       - '--port=9000'
-      - '--args=--transport,sse,--port,9000,-vv'
+      - '--args=--transport,sse,--port,9000,-v'
       - '--add-volume=type=cloud-storage,name=jira-volume,bucket=$_BUCKET_NAME,mount-options=only-dir=$_JIRA_ATTACHMENTS_FOLDER'
       - '--add-volume-mount=volume=jira-volume,mount-path=$_JIRA_MCP_SERVER_ATTACHMENTS_MOUNT_PATH'
       - '--concurrency=5'
