--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,6 @@ allure-python-commons==2.15.2
 python-dotenv==1.2.1
 gunicorn==23.0.0
 google-cloud-logging==3.13.0
-transformers==4.57.3
-torch==2.9.1
-sentence-transformers==5.2.0
 fastapi==0.128.0
 httpx==0.28.1
 python-dateutil==2.9.0.post0
@@ -14,8 +11,7 @@ requests==2.32.5
 pytest==9.0.2
 pytest-cov==7.0.0
 pytest-asyncio==1.3.0
-qdrant-client==1.16.2
-einops==0.8.1
+qdrant-client[grpc]==1.16.2
 python-magic==0.4.27
 python-magic-bin==0.4.14; sys_platform == 'win32'
 PyJWT==2.10.1
