--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -149,10 +149,9 @@ steps:
       - 'run'
       - 'deploy'
       - 'qdrant-vector-db'
-      - '--image=qdrant/qdrant:latest'
+      - '--image=qdrant/qdrant:v1.16.3'
       - '--network=agent-network'
       - '--subnet=agent-network'
-      - '--ingress=internal'
       - '--vpc-egress=private-ranges-only'
       - '--platform=managed'
       - '--region=us-central1'
